src/test/ui/unused/unused-mut-warning-captured-var.stderr
error: variable does not need to be mutable
  --> $DIR/unused-mut-warning-captured-var.rs:14:9
   |
LL |     let mut x = 1;
   |         ----^
   |         |
   |         help: remove this `mut`
   |
note: lint level defined here
  --> $DIR/unused-mut-warning-captured-var.rs:11:11
   |
LL | #![forbid(unused_mut)]
   |           ^^^^^^^^^^

error: aborting due to previous error

